examples/valid/program49.c
int main(void) {
    int x;
    x = 20;
    x /= 4;
    return x;
}

