examples/invalid/program31.c
int main() {
    int x;
    x = 5;
    x++;
    x++++;
    return x;
}

